---
source: spade-tests/src/typeinference.rs
---
entity test(clk: clock) -> bool {
    let (x, y): bool = true;

    true
}


error: Pattern type mismatch. Expected bool got (_, _)
  ┌─ testinput:2:9
  │
2 │     let (x, y): bool = true;
  │         ^^^^^^  ----   ---- Type bool inferred here
  │         │       │       
  │         │       because this has type bool
  │         expected bool, got (_, _)
  │
  = note: Expected: bool
               Got: (_, _)

error: Expected type bool, got (_, _)
  ┌─ testinput:2:24
  │
2 │     let (x, y): bool = true;
  │         ------  ----   ^^^^ Expected bool
  │         │       │       
  │         │       Type bool inferred here
  │         Type (_, _) inferred here
  │
  = note: Expected: bool
               Got: (_, _)
